# evangelist

./: .gitignore  README.md  evangelist.cabal
Data/Convert/: Evangelist.hs
Data/Convert/Evangelist/: CTypes.hs  Context.hs  Convert.hs  ImportExport.hs  Newtype.hs
